Actualización vistas gestión habitaciones admón.

--- a/templates/0-1-2-3-1-nueva_habitacion.html
+++ b/templates/0-1-2-3-1-nueva_habitacion.html
@@ -7,11 +7,12 @@
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
-    <link rel='stylesheet' type='text/css' media='screen' href='../static/estilos/estilos.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href=" {{ url_for('static',filename='estilos/estilos.css') }}">
     <script src='../static/scripts/scripts.js'></script>
 </head>
 <body>
     <div class="container">
+      <form method="POST" action="{{ url_for('nueva_habitacion_admin')}}" novalidate>
         <div class="row">
           <br>
         </div>
@@ -19,7 +20,7 @@
           <h1 class="text-center">RAFFLES HOTEL YACARTA</h1>
         </div>
         <div class="row">
-          <h2 class="text-center">Agregar Habitación</h2>
+          <h2 class="text-center">Agregar Habitación - desde Administrador</h2>
         </div>
 
         <div class="row">
@@ -27,7 +28,8 @@
             <p class="text-center">Habitación</p>
           </div>
           <div class="col">
-            <input type="text" class="form-control" name="habitacion" id="habitacion">
+            <!--<input type="text" class="form-control" name="habitacion" id="habitacion">-->
+            {{ form.codigo(class="form-control") }}
           </div>
         </div>
         
@@ -39,7 +41,8 @@
         <div class="row">
             <div class="btn-group" role="group" aria-label="Basic example">
               <!-- <a class="btn btn-outline-dark" href="0-1-2-3-gestion_habitaciones" role="button" onclick="validar(['habitacion'])">Crear</a> -->
-              <a class="btn btn-outline-dark" href="{{url_for('gestion_habitaciones_admin')}}" role="button" onclick="validar(['habitacion'])">Crear</a>
+              <!--<a class="btn btn-outline-dark" href="{{url_for('gestion_habitaciones_admin')}}" role="button" onclick="validar(['habitacion'])">Crear</a>-->
+              {{ form.enviar(class="btn btn-outline-dark") }}
               <!-- <a class="btn btn-outline-dark" href="0-1-2-3-gestion_habitaciones" role="button">Cancelar</a> -->
               <a class="btn btn-outline-dark" href="{{url_for('gestion_habitaciones_admin')}}" role="button">Cancelar</a>
               <!-- <a class="btn btn-outline-dark" href="0-1-2-3-gestion_habitaciones" role="button">Ir a Anterior</a> -->
@@ -49,9 +52,7 @@
                 
             </div> 
         </div>
-        
+      </form>  
       </div>
-
-
 </body>
 </html>
