Se actualizan los templates incluyendo el botón de cerrar sesión

--- a/templates/0-1-1-1-1-modificar_datos_usuario.html
+++ b/templates/0-1-1-1-1-modificar_datos_usuario.html
@@ -84,7 +84,7 @@
               <a class="btn btn-outline-dark" href="{{url_for('consulta_datos_usuario')}}"  role="button">Ir a Anterior</a>
               <!--<a class="btn btn-outline-dark" href="0-inicio.html" role="button">Ir a Inicio</a>-->
               <a class="btn btn-outline-dark" href="{{url_for('inicio')}}" role="button">Ir a Inicio</a>
-              
+              <a class="btn btn-outline-dark" href="{{url_for('logout')}}" role="button">Cerrar Sesión</a>
             </div> 
           </div>  
 
