--- a/templates/0-1-1-5-restringir_comentarios.html
+++ b/templates/0-1-1-5-restringir_comentarios.html
@@ -110,6 +110,7 @@
           <!--Revisar cuál es el link anterior-->
           <a class="btn btn-outline-dark" href="{{url_for('inicio')}}" role="button">Ir a Inicio</a>
           <!--<a class="btn btn-outline-dark" href="0-inicio.html" role="button">Ir a Inicio</a>-->
+          <a class="btn btn-outline-dark" href="{{url_for('logout')}}" role="button">Cerrar Sesión</a>
         </div> 
       </div>    
     </div>
