--- a/templates/0-1-3-2-1-consulta_comentarios_habitacion_usuario.html
+++ b/templates/0-1-3-2-1-consulta_comentarios_habitacion_usuario.html
@@ -70,6 +70,7 @@
           <!--<a class="btn btn-outline-dark" href="0-1-3-2-consulta_habitaciones_disponibles_usuario_final.html" role="button">Ir a Anterior</a>-->
           <a class="btn btn-outline-dark" href="{{url_for('consulta_habitaciones_disponibles_usuario_final')}}" role="button">Ir a Inicio</a>
           <!--<a class="btn btn-outline-dark" href="0-inicio.html" role="button">Ir a Inicio</a>-->
+          <a class="btn btn-outline-dark" href="{{url_for('logout')}}" role="button">Cerrar Sesión</a>
         </div> 
       </div>    
     </div>
