--- a/templates/0-1-1-2-1-agregar_usuario_administrador_crud.html
+++ b/templates/0-1-1-2-1-agregar_usuario_administrador_crud.html
@@ -62,7 +62,8 @@
                 <a class="btn btn-outline-dark" href="{{url_for('gestion_usuarios_administradores')}}" role="button">Ir a Anterior</a>
                 <!--<a class="btn btn-outline-dark" href="0-inicio.html" role="button">Ir a Inicio</a>-->
                 <a class="btn btn-outline-dark" href="{{url_for('inicio')}}" role="button">Ir a Inicio</a>                
-            </div> 
+                <a class="btn btn-outline-dark" href="{{url_for('logout')}}" role="button">Cerrar Sesión</a>
+              </div> 
         </div> 
     </form>
   </div>
