--- a/templates/0-1-1-4-2-modificar_habitacion.html
+++ b/templates/0-1-1-4-2-modificar_habitacion.html
@@ -73,6 +73,7 @@
               <!--<a class="btn btn-outline-dark" href="0-inicio.html" role="button">Ir a Inicio</a>-->
               <a class="btn btn-outline-dark" href="{{url_for('inicio')}}" role="button">Ir a Inicio</a>
               <!--<a class="btn btn-outline-dark" href="0-inicio.html" role="button">Ir a Inicio</a>-->
+              <a class="btn btn-outline-dark" href="{{url_for('logout')}}" role="button">Cerrar Sesión</a>
           </div> 
       </div>
         
