--- a/templates/0-1-2-1-1-modificar_datos_usuario.html
+++ b/templates/0-1-2-1-1-modificar_datos_usuario.html
@@ -96,6 +96,7 @@
               inicio debe llevarlo a la vista opciones_administrador -->
               <!--<a class="btn btn-outline-dark" href="0-inicio.html" role="button">Ir a Inicio</a>-->
               <a class="btn btn-outline-dark" href="{{url_for('inicio')}}" role="button">Ir a Inicio</a>
+              <a class="btn btn-outline-dark" href="{{url_for('logout')}}" role="button">Cerrar Sesión</a>
             </div> 
           </div>  
 
