--- a/templates/0-1-2-2-2-modificar_usuario_final_crud.html
+++ b/templates/0-1-2-2-2-modificar_usuario_final_crud.html
@@ -71,7 +71,8 @@
               <!-- <a class="btn btn-outline-dark" href="0-1-1-3-gestion_usuarios_finales.html" role="button">Ir a Anterior</a> -->
               <a class="btn btn-outline-dark" href="{{url_for('gestion_usuarios_finales_admin')}}" role="button">Ir a Anterior</a>
               <!--<a class="btn btn-outline-dark" href="0-inicio.html" role="button">Ir a Inicio</a>-->
-              <a class="btn btn-outline-dark" href="{{url_for('inicio')}}" role="button">Ir a Inicio</a>       
+              <a class="btn btn-outline-dark" href="{{url_for('inicio')}}" role="button">Ir a Inicio</a> 
+              <a class="btn btn-outline-dark" href="{{url_for('logout')}}" role="button">Cerrar Sesión</a>      
           </div> 
       </div>
     </form>  
