--- a/templates/0-1-2-3-1-nueva_habitacion.html
+++ b/templates/0-1-2-3-1-nueva_habitacion.html
@@ -49,7 +49,7 @@
               <a class="btn btn-outline-dark" href="{{url_for('gestion_habitaciones_admin')}}" role="button">Ir a Anterior</a>
               <!--<a class="btn btn-outline-dark" href="0-inicio" role="button">Ir a Inicio</a>-->
               <a class="btn btn-outline-dark" href="{{url_for('inicio')}}" role="button">Ir a Inicio</a>
-                
+              <a class="btn btn-outline-dark" href="{{url_for('logout')}}" role="button">Cerrar Sesión</a>  
             </div> 
         </div>
       </form>  
