--- a/templates/0-1-2-3-4-1-crear_reservas.html
+++ b/templates/0-1-2-3-4-1-crear_reservas.html
@@ -121,7 +121,8 @@
             <a class="btn btn-outline-dark" href="{{url_for('consulta_reservas_admin')}}" role="button">Ir a Anterior</a>
             <!--Revisar cuál es el link anterior-->
             <!--<a class="btn btn-outline-dark" href="0-inicio.html" role="button">Ir a Inicio</a>-->
-            <a class="btn btn-outline-dark" href="{{url_for('inicio')}}" role="button">Ir a Inicio</a>  
+            <a class="btn btn-outline-dark" href="{{url_for('inicio')}}" role="button">Ir a Inicio</a> 
+            <a class="btn btn-outline-dark" href="{{url_for('logout')}}" role="button">Cerrar Sesión</a> 
           </div> 
         </div>
       </form>      
