--- a/templates/0-1-3-1-1-modificar_datos_usuario.html
+++ b/templates/0-1-3-1-1-modificar_datos_usuario.html
@@ -85,6 +85,7 @@
               <a class="btn btn-outline-dark" href="{{url_for('inicio')}}" role="button">Ir a Inicio</a>
               <!--<a class="btn btn-outline-dark" href="0-1-3-1-consulta_datos_usuario.html" role="button">Ir a Anterior</a>-->
               <a class="btn btn-outline-dark" href="{{url_for('consulta_datos_usuario_final')}}" role="button">Ir a Anterior</a>
+              <a class="btn btn-outline-dark" href="{{url_for('logout')}}" role="button">Cerrar Sesión</a>
             </div> 
           </div>  
 
