--- a/templates/0-1-3-2-4-consulta_reservas.html
+++ b/templates/0-1-3-2-4-consulta_reservas.html
@@ -141,7 +141,7 @@
           <a class="btn btn-outline-dark" href="{{url_for('consulta_opciones_usuario_final_registrado')}}" role="button">Ir a Anterior</a>
           <a class="btn btn-outline-dark" href="{{url_for('inicio')}}" role="button">Ir a Inicio</a>
           <!--<a class="btn btn-outline-dark" href="inicio.html" role="button">Ir a Inicio</a>-->
-          
+          <a class="btn btn-outline-dark" href="{{url_for('logout')}}" role="button">Cerrar Sesión</a>
         </div> 
       </div>    
     </div>
