--- a/templates/0-1-3-2-consulta_habitaciones_disponibles_usuario_final.html
+++ b/templates/0-1-3-2-consulta_habitaciones_disponibles_usuario_final.html
@@ -60,6 +60,7 @@
           <a class="btn btn-outline-dark" href="{{url_for('inicio')}}" role="button">Ir a Inicio</a>
           <!--<a class="btn btn-outline-dark" href="0-1-3-4-modulo_reservas.html" role="button">Gestión Reservas</a>-->
           <a class="btn btn-outline-dark" href="{{url_for('modulo_reservas')}}" role="button">Gestión Reservas</a>
+          <a class="btn btn-outline-dark" href="{{url_for('logout')}}" role="button">Cerrar Sesión</a>
         </div> 
       </div>     
     </div>
