--- a/templates/0-1-3-3-2-calificar_habitaciones.html
+++ b/templates/0-1-3-3-2-calificar_habitaciones.html
@@ -76,6 +76,7 @@
           <a class="btn btn-outline-dark" href="{{url_for('gestion_habitaciones_reservadas_usuario_final')}}" role="button">Ir a Anterior</a>
           <!--<a class="btn btn-outline-dark" href="0-inicio.html" role="button">Ir a Inicio</a>-->
           <a class="btn btn-outline-dark" href="{{url_for('inicio')}}" role="button">Ir a Inicio</a>
+          <a class="btn btn-outline-dark" href="{{url_for('logout')}}" role="button">Cerrar Sesión</a>
         </div> 
       </div>
     </form>
