--- a/templates/0-1-3-opciones_usuario_final_registrado.html
+++ b/templates/0-1-3-opciones_usuario_final_registrado.html
@@ -72,6 +72,7 @@
                 <a class="btn btn-outline-dark" href="{{url_for('usuario_registrado')}}" role="button">Ir a Anterior</a>
                 <!-- <a class="btn btn-outline-dark" href="0-inicio.html" role="button">Ir a Inicio</a> -->
                 <a class="btn btn-outline-dark" href="{{url_for('inicio')}}" role="button">Ir a Inicio</a> 
+                <a class="btn btn-outline-dark" href="{{url_for('logout')}}" role="button">Cerrar Sesión</a>
             </div> 
         </div>
         </div>
