--- a/templates/0-2-2-consulta_habitaciones_disponibles.html
+++ b/templates/0-2-2-consulta_habitaciones_disponibles.html
@@ -27,33 +27,29 @@
           <thead>
             <tr>
               <th scope="col">Habitación</th>
-              <th scope="col">Calificación</th>
+              <th scope="col">Disponible</th>
               <th scope="col">Ver Comentarios</th>
             </tr>
           </thead>
-          <tbody>
+          {% if lista %}
+            {% for item in lista %}
+              <tbody>
+                <tr>
+                  <td scope="row">{{ item.codigo_habitacion }}</td>
+                  <td scope="row">{{ item.disponible }}</td>
+                  <td><a class="btn btn-light" href="{{url_for('consulta_comentario_habitacion', id = item.id_habitacion)}}" role="button">Ver Comentarios</a></td>
+                  <!--<td><a class="btn btn-light" href="0-2-2-1-consulta_comentarios_habitacion.html" role="button">Ver Comentarios</a></td>-->
+                </tr>
+              </tbody>
+            {% endfor %}
+          {% else %}
             <tr>
-              <th scope="row">101</th>
-              <td>6.0</td>
-              <td><a class="btn btn-light" href="{{url_for('consulta_comentario_habitacion')}}" role="button">Ver Comentarios</a></td>
-              <!--<td><a class="btn btn-light" href="0-2-2-1-consulta_comentarios_habitacion.html" role="button">Ver Comentarios</a></td>-->
+              <td colspan="2">No se encontraron habitaciones disponibles en este momento, por favor inténtelo más tarde</td>
             </tr>
-            <tr>
-              <th scope="row">102</th>
-              <td>7.0</td>
-              <td><a class="btn btn-light" href="{{url_for('consulta_comentario_habitacion')}}" role="button">Ver Comentarios</a></td>
-              <!--<td><a class="btn btn-light" href="0-2-2-1-consulta_comentarios_habitacion.html" role="button">Ver Comentarios</a></td>-->
-            </tr>
-            <tr>
-              <th scope="row">103</th>
-              <td>8.3</td>
-              <td><a class="btn btn-light" href="{{url_for('consulta_comentario_habitacion')}}" role="button">Ver Comentarios</a></td>
-              <!--<td><a class="btn btn-light" href="0-2-2-1-consulta_comentarios_habitacion.html" role="button">Ver Comentarios</a></td>-->
-            </tr>
-          </tbody>
+          {% endif %}
         </table>
-
       </div>
+
       <div class="row">
         <div class="btn-group" role="group" aria-label="Basic example">
           <a class="btn btn-outline-dark" href="{{url_for('registro_nuevo_usuario_final')}}" role="button">Registro Nuevo Usuario</a>
