Se realiza actualización general de gestión de habitaciones comentarios en Administrador y SuperAdministrador, pendiente ajustes en Usuario Final

--- a/templates/0-2-2-1-consulta_comentarios_habitacion.html
+++ b/templates/0-2-2-1-consulta_comentarios_habitacion.html
@@ -23,8 +23,7 @@
 
       <div class="row">
         <div class="col">
-          <h2 class="text-left">Consulta de comentarios de la habitación XXX</h2> 
-          <!--Aquí el XXX debe reemplazarse por la habitación que se consulte-->
+          <h2 class="text-left">Consulta de comentarios de la habitación</h2> 
         </div>        
       </div>
         
