--- a/templates/0-1-3-2-1-consulta_comentarios_habitacion_usuario.html
+++ b/templates/0-1-3-2-1-consulta_comentarios_habitacion_usuario.html
@@ -21,54 +21,43 @@
         <h1 class="text-center">RAFFLES HOTEL YACARTA</h1>
       </div>
       <div class="row">
-        <h2 class="text-center">Consulta de comentarios de la habitación XXX</h2>
-        <!--Aquí el XXX debe reemplazarse por la habitación que se consulte-->
+        <h2 class="text-center">Consulta de comentarios de la habitación</h2>
       </div>
       
-      <div class="row">
-        <div class="col">
-          <p class="text-left">Fecha Inicial</p>
-        </div> 
-        <div class="col">
-          <input type="date" class="form-control">
-        </div>       
-      </div>
-      <div class="row">
-        <div class="col">
-          <p class="text-left">Fecha Final</p>
-        </div> 
-        <div class="col">
-          <input type="date" class="form-control">
-        </div>        
-      </div>
       <div class="row">
         <table class="table table-striped text-center">
           <thead>
             <tr>
-              <th scope="col">Fecha</th>
+              <th scope="col">Fecha Reserva</th>
               <th scope="col">Descripción</th>
             </tr>
           </thead>
-          <tbody>
-            <tr>
-              <td>2021-09-15</td>
-              <td>XXXXXXXXXXXXXX</td>
-            </tr>
 
-            <tr>
-              <td>2021-09-18</td>
-              <td>XXXXXXXXXXXXXX</td>
-            </tr>
+          {% if lista %}
+            {% for item in lista %}   
+            <tbody>
+              <tr>
+                <td>{{ item.fecha_inicial }}</td>
+                <td>{{ item.comentario }}</td>
+              </tr>
 
-          </tbody>
+            </tbody>
+            {% endfor %}
+          
+          {% else %}
+            <tr>
+              <td colspan="2">No se encontraron comentarios relacionados en reservas con esas habitaciones</td>
+            </tr>
+          {% endif %} 
         </table>
 
       </div>
+      
       <div class="row">
         <div class="btn-group" role="group" aria-label="Basic example">
-          <a class="btn btn-outline-dark" href="{{url_for('inicio')}}" role="button">Ir a Anterior</a>
+          <a class="btn btn-outline-dark" href="{{url_for('consulta_habitaciones_disponibles_usuario_final')}}" role="button">Ir a Anterior</a>
           <!--<a class="btn btn-outline-dark" href="0-1-3-2-consulta_habitaciones_disponibles_usuario_final.html" role="button">Ir a Anterior</a>-->
-          <a class="btn btn-outline-dark" href="{{url_for('consulta_habitaciones_disponibles_usuario_final')}}" role="button">Ir a Inicio</a>
+          <a class="btn btn-outline-dark" href="{{url_for('inicio')}}" role="button">Ir a Inicio</a>
           <!--<a class="btn btn-outline-dark" href="0-inicio.html" role="button">Ir a Inicio</a>-->
           <a class="btn btn-outline-dark" href="{{url_for('logout')}}" role="button">Cerrar Sesión</a>
         </div> 
