--- a/templates/0-1-3-2-consulta_habitaciones_disponibles_usuario_final.html
+++ b/templates/0-1-3-2-consulta_habitaciones_disponibles_usuario_final.html
@@ -27,31 +27,28 @@
           <thead>
             <tr>
               <th scope="col">Habitación</th>
-              <th scope="col">Calificación</th>
+              <th scope="col">Disponible</th>
               <th scope="col">Ver Comentarios</th>
             </tr>
           </thead>
-          <tbody>
+          {% if lista %}
+            {% for item in lista %}
+              <tbody>
+                <tr>
+                  <th scope="row">{{ item.codigo_habitacion }}</th>
+                  <td scope="row">{{ item.disponible }}</td>
+                  <td><a class="btn btn-light" href="{{url_for('consulta_comentarios_habitacion_usuario', id = item.id_habitacion)}}" role="button">Ver Comentarios</a></td>
+                </tr>              
+              </tbody>
+            {% endfor %}
+            {% else %}
             <tr>
-              <th scope="row">101</th>
-              <td>6.0</td>
-              <!--<td><a class="btn btn-light" href="0-1-3-2-1-consulta_comentarios_habitacion_usuario.html" role="button">Ver Comentarios</a></td>-->
-              <td><a class="btn btn-light" href="{{url_for('consulta_comentarios_habitacion_usuario')}}" role="button">Ver Comentarios</a></td>
+              <td colspan="3">No se encontraron habitaciones disponibles en este momento, por favor inténtelo más tarde</td>
             </tr>
-            <tr>
-              <th scope="row">102</th>
-              <td>7.0</td>
-              <td><a class="btn btn-light" href="" role="button">Ver Comentarios</a></td>
-            </tr>
-            <tr>
-              <th scope="row">103</th>
-              <td>8.3</td>
-              <td><a class="btn btn-light" href="" role="button">Ver Comentarios</a></td>
-            </tr>
-          </tbody>
+            {% endif %}  
         </table>
-
       </div>
+
       <div class="row">
         <div class="btn-group" role="group" aria-label="Basic example">
           <!--<a class="btn btn-outline-dark" href="0-1-3-opciones_usuario_final_registrado.html" role="button">Ir a Anterior</a>-->
