--- a/templates/0-1-3-3-gestion_habitaciones_reservadas_usuario_final.html
+++ b/templates/0-1-3-3-gestion_habitaciones_reservadas_usuario_final.html
@@ -27,45 +27,33 @@
         <table class="table table-striped text-center">
           <thead>
             <tr>
-              <th scope="col">Habitación</th>
-              <th scope="col">Reserva</th>
-              <th scope="col">Calificación</th>
-              <th scope="col">Comentar</th>
-              <th scope="col">Calificar</th>
+              <th scope="col">ID Habitación</th>
+              <th scope="col">ID Reserva</th>
+              <th scope="col">Calificación Reserva</th>
+              <th scope="col">Comentar Reserva</th>
+              <th scope="col">Calificar Reserva</th>
             </tr>
           </thead>
-          <tbody>
+          {% if lista %}
+            {% for item in lista %}
+              <tbody>
+                <tr>
+                  <th>{{ item.id_habitacion }}</th>
+                  <th>{{ item.id_reserva }}</th>
+                  <td>{{ item.calificacion }}</td>
+                  <td><a class="btn btn-light" href="{{url_for('modificar_comentarios_habitacion', id_comentar = item.id_reserva)}}" role="button">Comentar</a></td>
+                  <!--<td><a class="btn btn-light" href="0-1-3-3-1-modificar_comentarios_habitacion.html" role="button">Comentar</a></td>-->
+                  <td><a class="btn btn-light" href="{{ url_for('calificar_habitaciones',codigo_habitacion='101',codigo_reserva='0025', id_calificar = item.id_reserva) }}" role="button">Calificar</a></td>
+                  <!--<td><a class="btn btn-light" href="0-1-3-3-2-calificar_habitaciones.html" role="button">Calificar</a></td>-->
+                </tr>
+              </tbody>
+            {% endfor %}
+          {% else %}
             <tr>
-              <th>101</th>
-              <th>0001</th>
-              <td>6.0</td>
-              <td><a class="btn btn-light" href="{{url_for('modificar_comentarios_habitacion')}}" role="button">Comentar</a></td>
-              <!--<td><a class="btn btn-light" href="0-1-3-3-1-modificar_comentarios_habitacion.html" role="button">Comentar</a></td>-->
-              <td><a class="btn btn-light" href="{{ url_for('calificar_habitaciones',codigo_habitacion='101',codigo_reserva='0025') }}" role="button">Calificar</a></td>
-              <!--<td><a class="btn btn-light" href="0-1-3-3-2-calificar_habitaciones.html" role="button">Calificar</a></td>-->
+              <td colspan="5">No se encontraron reservas realizadas por el usuario</td>
             </tr>
+          {% endif %}
 
-            <tr>
-              <th>102</th>
-              <th>0020</th>
-              <td>7.0</td>
-              <td><a class="btn btn-light" href="{{url_for('modificar_comentarios_habitacion')}}" role="button">Comentar</a></td>
-              <!--<td><a class="btn btn-light" href="0-1-3-3-1-modificar_comentarios_habitacion.html" role="button">Comentar</a></td>-->
-              <td><a class="btn btn-light" href="{{ url_for('calificar_habitaciones',codigo_habitacion='102',codigo_reserva='0020') }}" role="button">Calificar</a></td>
-              <!--<td><a class="btn btn-light" href="0-1-3-3-2-calificar_habitaciones.html" role="button">Calificar</a></td>-->
-            </tr>
-
-            <tr>
-              <th>103</th>
-              <th>0035</th>
-              <td>8.5</td>
-              <td><a class="btn btn-light" href="{{url_for('modificar_comentarios_habitacion')}}" role="button">Comentar</a></td>
-              <!--<td><a class="btn btn-light" href="0-1-3-3-1-modificar_comentarios_habitacion.html" role="button">Comentar</a></td>-->
-              <td><a class="btn btn-light" href="{{ url_for('calificar_habitaciones',codigo_habitacion='103',codigo_reserva='0035') }}" role="button">Calificar</a></td>
-              <!--<td><a class="btn btn-light" href="0-1-3-3-2-calificar_habitaciones.html" role="button">Calificar</a></td>-->
-            </tr>
-
-          </tbody>
         </table>
 
       </div>
