--- a/templates/0-1-3-3-gestion_habitaciones_reservadas_usuario_final.html
+++ b/templates/0-1-3-3-gestion_habitaciones_reservadas_usuario_final.html
@@ -43,7 +43,7 @@
                   <td>{{ item.calificacion }}</td>
                   <td><a class="btn btn-light" href="{{url_for('modificar_comentarios_habitacion', id_comentar = item.id_reserva)}}" role="button">Comentar</a></td>
                   <!--<td><a class="btn btn-light" href="0-1-3-3-1-modificar_comentarios_habitacion.html" role="button">Comentar</a></td>-->
-                  <td><a class="btn btn-light" href="{{ url_for('calificar_habitaciones',codigo_habitacion='101',codigo_reserva='0025', id_calificar = item.id_reserva) }}" role="button">Calificar</a></td>
+                  <td><a class="btn btn-light" href="{{ url_for('calificar_habitaciones',id_calificar = item.id_reserva)}}" role="button">Calificar</a></td>
                   <!--<td><a class="btn btn-light" href="0-1-3-3-2-calificar_habitaciones.html" role="button">Calificar</a></td>-->
                 </tr>
               </tbody>
