--- a/templates/0-1-3-3-1-modificar_comentarios_habitacion.html
+++ b/templates/0-1-3-3-1-modificar_comentarios_habitacion.html
@@ -14,7 +14,8 @@
 
 <body>
     <div class="container">
-      <form id="formModificaComentariosHabitacion" action="" method="POST">  
+      <form method="POST" action="{{ url_for('modificar_comentarios_habitacion', id_comentar = id_reserva) }}" novalidate>  
+        {{ form.hidden_tag() }}
         <div class="row">
           <br>
         </div>
@@ -24,47 +25,74 @@
         <div class="row">
           <h2 class="text-center">Modificar Comentario</h2>
         </div>
+
         <div class="row">
-          <div class="row">
             <div class="col">
-              <h3 class="text-center">Habitación : 101</h3>
-              <!--Aquí el 101 se debe reemplazar por la consulta que se realice a BD-->
+              {{ form.bedroom.label }}
             </div>
-          </div>
+            <div class="col">
+              {{ form.bedroom(class="form-control") }}
+            </div>
         </div> 
 
         <div class="row">
           <div class="col">
-            <h3 class="text-center">Reserva : 0001</h3>
-            <!--Aquí el 0001 se debe reemplazar por la consulta que se realice a BD-->
+            {{ form.reservation.label }}
           </div>
-        </div>
+          <div class="col">
+            {{ form.reservation(class="form-control") }}
+          </div>
+        </div> 
 
 
         <div class="row">
           <div class="col">
-            <p class="text-left">Descripción del comentario</p>
-          </div>
+            {{ form.comment.label }}
+          </div>      
         </div>
-
-
 
         <div class="row">
           <div class="col">
-            <input type="text-area" class="form-control" name="descripcion" id="descripcion">
-          </div>
+            {{ form.comment(class="form-control") }}
+          </div>        
         </div>
 
-              
+        <div class="row">
+          <div class="col">
+            {{ form.newcomment.label }}
+          </div>      
+        </div>
+
+        <div class="row">
+          <div class="col">
+            {{ form.newcomment(class="form-control") }}
+          </div>        
+        </div>
+
+        <div class="row">
+          <br>
+        </div>
+
+        <div class="row">             
+          {{ form.modifycomment(class="btn btn-outline-dark") }}
+        </div> 
+
+        <div class="row">
+          <br>
+        </div>
+
+        <div class="row">
+          {% if mensaje %}
+            {{ mensaje }}
+          {% endif %}
+        </div>
+
         <div class="row">
           <br>
         </div>
 
         <div class="row">
           <div class="btn-group" role="group" aria-label="Basic example">
-            <!--<a class="btn btn-outline-dark" href="0-1-3-3-gestion_habitaciones_reservadas_usuario_final.html" role="button">Modificar</a>-->
-            <!--<a class="btn btn-outline-dark" href="{{url_for('gestion_habitaciones_reservadas_usuario_final')}}" role="button">Modificar</a>-->
-            <button id="btnModificaComentariosHabitacion" type="submit" class="btn btn-outline-dark">Modificar</button>
             <!--<a class="btn btn-outline-dark" href="0-1-3-3-gestion_habitaciones_reservadas_usuario_final.html" role="button">Cancelar</a>-->
             <a class="btn btn-outline-dark" href="{{url_for('gestion_habitaciones_reservadas_usuario_final')}}" role="button">Cancelar</a>
             <!--<a class="btn btn-outline-dark" href="0-1-3-3-gestion_habitaciones_reservadas_usuario_final.html" role="button">Ir a Anterior</a>-->
