--- a/templates/0-1-3-3-gestion_habitaciones_reservadas_usuario_final.html
+++ b/templates/0-1-3-3-gestion_habitaciones_reservadas_usuario_final.html
@@ -30,7 +30,7 @@
               <th scope="col">ID Habitación</th>
               <th scope="col">ID Reserva</th>
               <th scope="col">Calificación Reserva</th>
-              <th scope="col">Comentar Reserva</th>
+              <th scope="col">Modificar Comentario Reserva</th>
               <th scope="col">Calificar Reserva</th>
             </tr>
           </thead>
@@ -41,10 +41,10 @@
                   <th>{{ item.id_habitacion }}</th>
                   <th>{{ item.id_reserva }}</th>
                   <td>{{ item.calificacion }}</td>
-                  <td><a class="btn btn-light" href="{{url_for('modificar_comentarios_habitacion', id_comentar = item.id_reserva)}}" role="button">Comentar</a></td>
+                  <td><a class="btn btn-light" href="{{url_for('modificar_comentarios_habitacion', id_comentar = item.id_reserva)}}" role="button">Modificar Comentario</a></td>
                   <!--<td><a class="btn btn-light" href="0-1-3-3-1-modificar_comentarios_habitacion.html" role="button">Comentar</a></td>-->
-                  <td><a class="btn btn-light" href="{{ url_for('calificar_habitaciones',id_calificar = item.id_reserva)}}" role="button">Calificar</a></td>
-                  <!--<td><a class="btn btn-light" href="0-1-3-3-2-calificar_habitaciones.html" role="button">Calificar</a></td>-->
+                  <!--<td><a class="btn btn-light" href="{{ url_for('calificar_habitaciones',id_calificar = item.id_reserva)}}" role="button">Calificar</a></td>-->
+                  <td><a class="btn btn-light" href="0-1-3-3-2-calificar_habitaciones.html" role="button">Calificar</a></td>
                 </tr>
               </tbody>
             {% endfor %}
@@ -69,12 +69,6 @@
         </div> 
       </div> 
       
-      <div class="row">
-        <p id="mensaje">
-            {{sentencia}}
-        </p>
-      </div>
-
     </div>
   </body>
 </html>
