--- a/templates/0-1-3-3-2-calificar_habitaciones.html
+++ b/templates/0-1-3-3-2-calificar_habitaciones.html
@@ -13,9 +13,10 @@
 </head>
 <body>
     <div class="container">
-      <form method="POST" action="{{ url_for('calificar_habitaciones',codigo_habitacion=numero_habitacion,codigo_reserva=numero_reserva)}}" novalidate>
-      {{ form.hidden_tag() }}
+      <form method="POST" action="{{ url_for('calificar_habitaciones', id_calificar = id_reserva) }}" novalidate>  
+        {{ form.hidden_tag() }}
 
+      
       <div class="row">
         <br>
       </div>
@@ -29,36 +30,55 @@
       </div>
 
       <div class="row">
-        <h2 class="text-center">Calificar Habitación</h2>
+        <h2 class="text-center">Calificar Reserva</h2>
       </div>
 
       <div class="row">
-        <div class="row">
-          <div class="col">
-            <h3 class="text-center">Habitación : {{ numero_habitacion }}</h3>
-            <!--Aquí el 101 se debe reemplazar por la consulta que se realice a BD-->
-          </div>
+        <div class="col">
+          {{ form.bedroom.label }}
+        </div>
+        <div class="col">
+          {{ form.bedroom(class="form-control") }}
+        </div>
+      </div> 
+
+      <div class="row">
+        <div class="col">
+          {{ form.reservation.label }}
+        </div>
+        <div class="col">
+        {{ form.reservation(class="form-control") }}
+        </div>
+      </div> 
+  
+      <div class="row">
+        <div class="col">
+          {{ form.calification.label }}
+        </div>
       </div>
   
       <div class="row">
         <div class="col">
-          <h3 class="text-center">Reserva : {{ numero_reserva }}</h3>
-          <!--Aquí el 0001 se debe reemplazar por la consulta que se realice a BD-->
+          {{ form.calification(class="form-range", min=0, max=10) }}
         </div>
       </div>
-  
-  
+
       <div class="row">
-        <div class="col">
-          <p class="text-left">Calificación</p>
-        </div>
+        <br>
       </div>
-  
+
+      <div class="row">             
+        {{ form.send(class="btn btn-outline-dark") }}
+      </div> 
+
       <div class="row">
-        <div class="col">
-          <!--<input type="range" class="form-range" min="0" max="10" id="calificacion">-->
-          {{ form.calificacion(class="form-range") }}
-        </div>
+        <br>
+      </div>
+
+      <div class="row">
+        {% if mensaje %}
+          {{ mensaje }}
+        {% endif %}
       </div>
 
       <div class="row">
@@ -67,9 +87,6 @@
 
       <div class="row">
         <div class="btn-group" role="group" aria-label="Basic example">
-          <!--<a class="btn btn-outline-dark" href="0-1-3-3-gestion_habitaciones_reservadas_usuario_final.html" role="button">Modificar</a>-->
-          <!--<a class="btn btn-outline-dark" href="{{url_for('gestion_habitaciones_reservadas_usuario_final')}}" role="button">Modificar</a>-->
-          {{ form.enviar(class="btn btn-outline-dark") }}
           <!--<a class="btn btn-outline-dark" href="0-1-3-3-gestion_habitaciones_reservadas_usuario_final.html" role="button">Cancelar</a>-->
           <a class="btn btn-outline-dark" href="{{url_for('gestion_habitaciones_reservadas_usuario_final')}}" role="button">Cancelar</a>
           <!--<a class="btn btn-outline-dark" href="0-1-3-3-gestion_habitaciones_reservadas_usuario_final.html" role="button">Ir a Anterior</a>-->
@@ -80,5 +97,5 @@
         </div> 
       </div>
     </form>
-    </div>      
+    </div>        
 </body>
