Actualizacion final del CRUD de habitaciones

--- a/templates/0-1-1-4-gestion_habitaciones.html
+++ b/templates/0-1-1-4-gestion_habitaciones.html
@@ -7,7 +7,7 @@
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
-    <link rel='stylesheet' type='text/css' media='screen' href='../static/estilos/estilos.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href=" {{ url_for('static',filename='estilos/estilos.css') }}">
     <script src='../static/scripts/scripts.js'></script>
 </head>
 <body>
@@ -21,6 +21,9 @@
       <div class="row">
         <h2 class="text-center">Gestión Habitaciones</h2>
       </div>
+      <div class="row">
+        <br>
+      </div>
 
       <div class="row">
         <table class="table table-striped text-center">
@@ -28,46 +31,35 @@
             <tr>
               <th scope="col">Número de Habitación</th>
               <th scope="col">Disponible</th>
-              <th scope="col">Calificación</th>
-              <th scope="col">Ver Comentarios</th>
+              <!--<th scope="col">Calificación</th>-->
+              <!--<th scope="col">Ver Comentarios</th>-->
               <th scope="col">Modificar</th>
+              <th scope="col">Borrar</th>
             </tr>
           </thead>
 
           <tbody>
-            <tr>
-              <td>101</td>
-              <td>Si</td>
-              <td>9.5</td>
-               <!-- <td><a class="btn btn-light" href="0-1-1-4-2-modificar_habitacion.html" role="button">Ver Comentarios</a></td>-->
-              <td><a class="btn btn-light" href="{{url_for('consulta_comentarios_habitacion_usuario_SA')}}" role="button">Ver Comentarios</a></td>
-               <!--<td><a class="btn btn-light" href="0-1-1-4-3-consulta_comentarios_habitacion_usuario.html" role="button">Modificar</a></td> -->
-              <td><a class="btn btn-light" href="{{url_for('modificar_habitacion')}}"role="button">Modificar</a></td>
-            </tr>
-
-            <tr>
-              <td>102</td>
-              <td>No</td>
-              <td>8.8</td>
-               <!-- <td><a class="btn btn-light" href="0-1-1-4-2-modificar_habitacion.html" role="button">Ver Comentarios</a></td>-->
-               <td><a class="btn btn-light" href="{{url_for('consulta_comentarios_habitacion_usuario_SA')}}" role="button">Ver Comentarios</a></td>
-               <!--<td><a class="btn btn-light" href="0-1-1-4-3-consulta_comentarios_habitacion_usuario.html" role="button">Modificar</a></td> -->
-              <td><a class="btn btn-light" href="{{url_for('modificar_habitacion')}}" role="button">Modificar</a></td>
-            </tr>
-
-            <tr>
-              <td>103</td>
-              <td>Si</td>
-              <td>6.5</td>
-               <!-- <td><a class="btn btn-light" href="0-1-1-4-2-modificar_habitacion.html" role="button">Ver Comentarios</a></td>-->
-               <td><a class="btn btn-light" href="{{url_for('consulta_comentarios_habitacion_usuario_SA')}}" role="button">Ver Comentarios</a></td>
-               <!--<td><a class="btn btn-light" href="0-1-1-4-3-consulta_comentarios_habitacion_usuario.html" role="button">Modificar</a></td> -->
-              <td><a class="btn btn-light" href="{{url_for('modificar_habitacion')}}"role="button">Modificar</a></td>
-            </tr>
-
+            <!--<tr>-->
+              <!--<td>101</td>-->
+              <!--<td>Si</td>-->
+              <!--<td>9.5</td>-->
+              <!-- <td><a class="btn btn-light" href="0-1-2-3-3-consulta_comentarios_habitacion_usuario.html" role="button">Ver Comentarios</a></td> -->
+              <!--<td><a class="btn btn-light" href="{{url_for('consulta_comentarios_habitacion_usuario_admin')}}" role="button">Ver Comentarios</a></td>-->
+              <!-- <td><a class="btn btn-light" href="0-1-2-3-2-modificar_habitacion.html" role="button">Modificar</a></td> -->
+              <!--<td><a class="btn btn-light" href="{{url_for('modificar_habitacion_admin')}}" role="button">Modificar</a></td>-->
+            <!--</tr>-->
+            {% if lista %}
+              {% for item in lista %}
+                <tr>
+                  <td>{{ item.codigo_habitacion }}</td>  
+                  <td>{{ item.disponible }}</td>
+                  <td><a class="btn btn-light" href="{{url_for('modificar_habitacion',id_habitacion=item.id_habitacion,rol='SA')}}" role="button">Modificar</a></td>
+                  <td><a class="btn btn-light" href="{{url_for('eliminar_habitacion',id_habitacion=item.id_habitacion,rol='SA')}}" role="button">Borrar</a></td>
+                </tr>
+              {% endfor %}
+            {% endif %}    
           </tbody>
-        </table>
-
+        </table>  
       </div>
       <div class="row">
         <div class="btn-group" role="group" aria-label="Basic example">
