--- a/templates/0-1-2-3-2-modificar_habitacion.html
+++ b/templates/0-1-2-3-2-modificar_habitacion.html
@@ -16,6 +16,7 @@
         <div class="row">
           <br>
           {{ form.id_habitacion() }} 
+          {{ form.rol() }} 
         </div>
         <div class="row" id = "encabezado">
           <h1 class="text-center">RAFFLES HOTEL YACARTA</h1>
