--- a/templates/0-1-1-4-2-modificar_habitacion.html
+++ b/templates/0-1-1-4-2-modificar_habitacion.html
@@ -7,65 +7,59 @@
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
-    <link rel='stylesheet' type='text/css' media='screen' href='../static/estilos/estilos.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href=" {{ url_for('static',filename='estilos/estilos.css') }}">
     <script src='../static/scripts/scripts.js'></script>
 </head>
 <body>
     <div class="container">
-      <div class="row">
-        <br>
-      </div>
-      <div class="row" id = "encabezado">
-        <h1 class="text-center">RAFFLES HOTEL YACARTA</h1>
-      </div>
-      <div class="row">
-        <h2 class="text-center">Modificar Habitación</h2>
-      </div>
-
-      <div class="row">
-        <div class="col">
-          <p class="text-center">Habitación</p>
+        <form method="POST" action="{{ url_for('modificar_habitacion_admin')}}" novalidate>
+        <div class="row">
+          <br>
+          {{ form.id_habitacion() }} 
+          {{ form.rol() }} 
         </div>
-        <div class="col">
-          <select class="form-select" aria-label="Default select example">
-            <option selected>Elija la habitación</option>
-            <option value="1">101</option>
-            <option value="2">102</option>
-            <option value="3">103</option>
-          </select>
+        <div class="row" id = "encabezado">
+          <h1 class="text-center">RAFFLES HOTEL YACARTA</h1>
         </div>
-      </div>
-
-      <div class="row">
-        <br>
-      </div>
-
-
-      <div class="row">
-        <div class="col">
-          <p class="text-center">Disponible</p>
+        <div class="row">
+          <h2 class="text-center">Modificar Habitación desde Superadministrador</h2>
         </div>
-        <div class="col">
-          <div class="form-check form-check-inline">
-            <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="Si">
-            <label class="form-check-label" for="inlineRadio1">Si</label>
+         
+        <div class="row">
+          <br>
+        </div>
+
+        <div class="row">
+          <div class="col">
+            <p class="text-center">Disponible </p>
           </div>
-          <div class="form-check form-check-inline">
-            <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="No">
-            <label class="form-check-label" for="inlineRadio2">No</label>
+          <div class="col">
+            {{ form.codigo(class="form-control") }}
           </div>
         </div>
-      </div>
-      
 
-      <div class="row">
-        <br>
-      </div>
+        <div class="row">
+          <br>
+        </div>
+
+        <div class="row">
+          <div class="col">
+            <p class="text-center">Disponible </p>
+          </div>
+          <div class="col">
+            {{ form.disponible() }}
+         </div> 
+        
+        <div class="row">
+          <br>
+        </div>
+
 
         <div class="row">
           <div class="btn-group" role="group" aria-label="Basic example">
               <!-- <a class="btn btn-outline-dark" href="0-1-1-4-gestion_habitaciones.html" role="button" onclick="validar(['habitacion'])">Modificar</a>-->
-              <a class="btn btn-outline-dark" href="{{url_for('gestion_habitaciones')}}" role="button" onclick="validar(['habitacion'])">Modificar</a>
+              <!--<a class="btn btn-outline-dark" href="{{url_for('gestion_habitaciones')}}" role="button" onclick="validar(['habitacion'])">Modificar</a>-->
+              {{ form.enviar(class="btn btn-outline-dark") }}
               <!--<a class="btn btn-outline-dark" href="0-1-1-4-gestion_habitaciones.html" role="button">Cancelar</a>-->      
               <a class="btn btn-outline-dark" href="{{url_for('gestion_habitaciones')}}" role="button">Cancelar</a>
               <!-- <a class="btn btn-outline-dark" href="0-1-1-4-gestion_habitaciones.html" role="button">Ir a Anterior</a>-->        
@@ -76,9 +70,7 @@
               <a class="btn btn-outline-dark" href="{{url_for('logout')}}" role="button">Cerrar Sesión</a>
           </div> 
       </div>
-        
+      </form>    
       </div>
-
-
 </body>
 </html>
